# RegCheck_v1.1

./: .dockerignore  .gitignore  BLUEPRINT.md  Dockerfile  PITCH.md  POSITION_PAPER.md  README.md  SIMPLE_EXPLANATION.md  __init__.py  app.py  auth.py  main.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/: __init__.py  workflow.py
compilers/: __init__.py  constraint_engine.py  contract_extractor.py  llm_config.py  quality_evaluator.py
data/output/: case_study_report.md  demo_report.md  mri_case_study_report.md
data/samples/: NCT00461539_publication.md  NCT00461539_registration.md  NCT01743339_registration.md  NCT02950961_publication.md  NCT02950961_registration.md  NCT04000100_publication.md  NCT04000100_registration.md  OSF_abc123_publication.md  OSF_abc123_registration.md
data/samples/pdfs/: NCT00048607_registration.md  NCT00259883_registration.md  NCT00457106_registration.md
data/study2_moderna_vaccine/: registration_NCT04470427.json
data/study3_pfizer_vaccine/: registration_NCT04368728.json
data/study5_checkmate_outcome_switching/: publication_abstract_PMID26406148.txt  publication_metadata_NEJMoa1510665.json  registration_NCT01668784.json
demos/: __init__.py  case_study.py  case_study_mri.py  dashboard.py
evaluation/: README.md  __init__.py  compare_eval.py  evaluator.py  groundtruth.py  metrics.py
graph/: __init__.py  graph_builder.py  graph_differ.py
parsers/: __init__.py  base.py  clinicaltrials.py  ctgov_json_parser.py  docling_parser.py  docling_vision_parser.py  doi_lookup.py  mock_parser.py  pdf_parser.py
reports/: __init__.py  ledger_generator.py  severity_scorer.py
schemas/: __init__.py  ir.py
tests/: test_evaluation.py  test_graph.py  test_integration.py  test_llm_config.py  test_parsers.py  test_schemas.py  test_workflow.py
