[project]
name = "regcheck-v2"
version = "0.1.0"
description = "Scientific Integrity Engine - RegCheck v2: Neuro-symbolic protocol deviation detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RegCheck Team"}
]

dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "instructor>=1.0.0",
    "litellm>=1.0.0",
    "docling>=2.0.0",
    "rich>=13.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
