[project]
name = "regcheck-v11"
version = "1.1.0"
description = "RegCheck v1.1 — Scientific Integrity Engine: Hybrid architecture for automated registration auditing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RegCheck Team"}
]

dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "langgraph>=0.2.0",
    "litellm>=1.0.0",
    "rich>=13.0",
    "typer>=0.9.0",
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "PyMuPDF>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
